--- a/Panopticon.xcodeproj/xcshareddata/xcschemes/iOS Framework.xcscheme
+++ b/Panopticon.xcodeproj/xcshareddata/xcschemes/iOS Framework.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "8FB32AE61C15F72500FD5041"
                BuildableName = "Panopticon.framework"
                BlueprintName = "iOS Framework"
-               ReferencedContainer = "container:TotalObserver.xcodeproj">
+               ReferencedContainer = "container:Panopticon.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "8FB32AF01C15F72500FD5041"
                BuildableName = "TotalObserverTests.xctest"
                BlueprintName = "TotalObserverTests"
-               ReferencedContainer = "container:TotalObserver.xcodeproj">
+               ReferencedContainer = "container:Panopticon.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -45,7 +45,7 @@
             BlueprintIdentifier = "8FB32AE61C15F72500FD5041"
             BuildableName = "Panopticon.framework"
             BlueprintName = "iOS Framework"
-            ReferencedContainer = "container:TotalObserver.xcodeproj">
+            ReferencedContainer = "container:Panopticon.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -67,7 +67,7 @@
             BlueprintIdentifier = "8FB32AE61C15F72500FD5041"
             BuildableName = "Panopticon.framework"
             BlueprintName = "iOS Framework"
-            ReferencedContainer = "container:TotalObserver.xcodeproj">
+            ReferencedContainer = "container:Panopticon.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -85,7 +85,7 @@
             BlueprintIdentifier = "8FB32AE61C15F72500FD5041"
             BuildableName = "Panopticon.framework"
             BlueprintName = "iOS Framework"
-            ReferencedContainer = "container:TotalObserver.xcodeproj">
+            ReferencedContainer = "container:Panopticon.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
