--- a/Example/Example.xcodeproj/xcshareddata/xcschemes/Pods Example.xcscheme
+++ b/Example/Example.xcodeproj/xcshareddata/xcschemes/Pods Example.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F589195388D20070C39A"
-               BuildableName = "TO Example.app"
+               BuildableName = "Panopticon.app"
                BlueprintName = "Pods Example"
                ReferencedContainer = "container:Example.xcodeproj">
             </BuildableReference>
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F5AD195388D20070C39A"
-               BuildableName = "TO Tests.xctest"
+               BuildableName = "Panopticon Tests.xctest"
                BlueprintName = "Tests"
                ReferencedContainer = "container:Example.xcodeproj">
             </BuildableReference>
@@ -47,7 +47,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F5AD195388D20070C39A"
-               BuildableName = "TO Tests.xctest"
+               BuildableName = "Panopticon Tests.xctest"
                BlueprintName = "Tests"
                ReferencedContainer = "container:Example.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "TO Example.app"
+            BuildableName = "Panopticon.app"
             BlueprintName = "Pods Example"
             ReferencedContainer = "container:Example.xcodeproj">
          </BuildableReference>
@@ -80,7 +80,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "TO Example.app"
+            BuildableName = "Panopticon.app"
             BlueprintName = "Pods Example"
             ReferencedContainer = "container:Example.xcodeproj">
          </BuildableReference>
@@ -99,7 +99,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "TO Example.app"
+            BuildableName = "Panopticon.app"
             BlueprintName = "Pods Example"
             ReferencedContainer = "container:Example.xcodeproj">
          </BuildableReference>
